log/build_2025-03-24_13-49-53/arm_bot/stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/jetson/Desktop/ros2_ws1/install/arm_bot/lib/python3.8/site-packages/arm_bot/sub_sensinfo.py", line 75
    if self.control["P3"] < 0
                            ^
SyntaxError: invalid syntax

